add citations, add snippet

--- a/layouts/partials/vendor.html
+++ b/layouts/partials/vendor.html
@@ -1,6 +1,6 @@
 <tr>
     <td><a href="{{ .url }}">{{ .name }}</a></td>
-    <td> {{ .percent_increase }} </td>
+    <td> <a href="{{ .source }}">{{ .gating_mechanism }}</a></td>
     <td>
         <ul>
             {{ range .issues }}
